# docbot

./: .gitignore  pyproject.toml
src/docbot/: __init__.py  __main__.py  serialized_dom.json
