[project]
name = "docbot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "openai>=1.51.2",
    "browsergym>=0.8.0",
    "html2text>=2024.2.26",
    "markdownify>=0.13.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
